--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>MeuBanco</title>
+    <link
+      rel="icon"
+      href="favicon.svg"
+      type="image/svg+xml"
+    />
   </head>
   <body>
     <div id="root"></div>
