refactor: change project to Clean Architecture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="root"></div>
     <script
       type="module"
-      src="/src/main.tsx"
+      src="/src/main/main.tsx"
     ></script>
   </body>
 </html>
